--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -32,10 +32,11 @@ jobs:
 
       - name: Run Tests
         run: |
-          pytest -vr A tests --cov
+          coverage run -m --source=stock_indicators pytest -svr A tests
+          coverage xml
 
       - name: Post coverage to Codacy
         uses: codacy/codacy-coverage-reporter-action@v1
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          coverage-reports: .coverage
+          coverage-reports: coverage.xml
