--- a/.github/workflows/semantic-pr-linter.yml
+++ b/.github/workflows/semantic-pr-linter.yml
@@ -59,7 +59,7 @@ jobs:
             Our PR title name taxonomy is `type: Subject`, where **type** is typically
             *feat*, *fix*, or *chore*, and **subject** is a phrase (proper noun) that starts with a capitalized letter.
             The *chore* type usually has a subject that starts with an action verb like *Add* or *Update*.
-            Examples: `feat: Admin portal login`, `fix: Divide by zero bug in SMA`, and `chore: Update user docs`.
+            Examples: `feat: Admin portal login`, `fix: Divide by zero bug in SMA`, and `docs: Update user guid`.
             See the [Conventional Commits specification](https://www.conventionalcommits.org) for more information.
 
       # Delete a previous comment when the issue has been resolved
