--- a/.github/workflows/deploy-package.yml
+++ b/.github/workflows/deploy-package.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         python-version: "3.x"
 
-    - name: Install pypa/build
+    - name: Setup pypa/build
       run: python3 -m pip install build --user
 
     - name: Build a binary wheel and a source tarball
