--- a/.github/workflows/test-docs-a11y.yml
+++ b/.github/workflows/test-docs-a11y.yml
@@ -19,14 +19,14 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Install Ruby
+      - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           working-directory: docs
           ruby-version: 3.1.3
           bundler-cache: false
 
-      - name: Install GEMs
+      - name: Setup GEMs
         working-directory: docs
         env:
           BUNDLE_GEMFILE: ${{github.workspace}}/docs/GemFile
