--- a/.github/workflows/test-docs-links.yml
+++ b/.github/workflows/test-docs-links.yml
@@ -18,14 +18,14 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Install Ruby
+      - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           working-directory: docs
           ruby-version: 3.1.3
           bundler-cache: false
 
-      - name: Install GEMs
+      - name: Setup GEMs
         working-directory: docs
         env:
           BUNDLE_GEMFILE: ${{github.workspace}}/docs/GemFile
@@ -33,7 +33,7 @@ jobs:
           pwd
           bundle install
 
-      - name: Install HTML Proofer
+      - name: Setup HTML Proofer
         run: gem install html-proofer
 
       - name: Replace "data-src"
