--- a/.github/workflows/test-docs-a11y.yml
+++ b/.github/workflows/test-docs-a11y.yml
@@ -56,3 +56,7 @@ jobs:
           npx pa11y-ci \
             --sitemap http://127.0.0.1:4000/sitemap.xml \
             --sitemap-exclude "/*.pdf"
+
+      - name: Kill site (failsafe)
+        if: success() || failure()
+        run: pkill -f jekyll
