--- a/.github/workflows/test-docs-links.yml
+++ b/.github/workflows/test-docs-links.yml
@@ -70,3 +70,7 @@ jobs:
             --ignore-status-codes "0,302,403,406,408,429,503,999" \
             --swap-urls "https\://python.stockindicators.dev:http\://127.0.0.1:4000" \
             --ignore-urls "/fonts.gstatic.com/"
+
+      - name: Kill site (failsafe)
+        if: success() || failure()
+        run: pkill -f jekyll
