--- a/.github/workflows/test-docs-links.yml
+++ b/.github/workflows/test-docs-links.yml
@@ -72,5 +72,5 @@ jobs:
             --ignore-urls "/fonts.gstatic.com/"
 
       - name: Kill site (failsafe)
-        if: success() || failure()
+        if: always()
         run: pkill -f jekyll
