--- a/.github/workflows/test-indicators-coverage.yml
+++ b/.github/workflows/test-indicators-coverage.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout source
         uses: actions/checkout@v4
 
       - name: Setup .NET
@@ -26,12 +26,12 @@ jobs:
         with:
           python-version: 3.12
 
-      - name: Install dependencies
+      - name: Install requirements
         run: |
           pip install -r requirements.txt
           pip install -r requirements-test.txt
 
-      - name: Run tests
+      - name: Test indicators
         run: |
           coverage run -m --source=stock_indicators pytest -svr A tests
           coverage xml
