--- a/.github/workflows/test-indicators.yml
+++ b/.github/workflows/test-indicators.yml
@@ -3,9 +3,6 @@
 name: Indicators
 
 on:
-  push:
-    branches: ["main"]
-
   pull_request:
     branches: ["main"]
 
@@ -23,10 +20,10 @@ jobs:
         dotnet-version: ["6.0.x", "8.0.x"]
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Setup .NET SDK
+      - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
@@ -38,12 +35,12 @@ jobs:
           cache: "pip"
           python-version: ${{ matrix.python-version }}
 
-      - name: Install pip packages
+      - name: Install requirements
         run: |
           pip install -r requirements.txt
           pip install -r requirements-test.txt
 
-      - name: Run Tests
+      - name: Test indicators
         id: test-library
         run: |
           pytest -vr A tests
