--- a/.github/workflows/test-docs-a11y.yml
+++ b/.github/workflows/test-docs-a11y.yml
@@ -26,7 +26,7 @@ jobs:
           ruby-version: 3.1.3
           bundler-cache: false
 
-      - name: Setup GEMs
+      - name: Install GEMs
         working-directory: docs
         env:
           BUNDLE_GEMFILE: ${{github.workspace}}/docs/GemFile
