--- a/.github/workflows/test-docs-links.yml
+++ b/.github/workflows/test-docs-links.yml
@@ -1,4 +1,5 @@
 name: Website
+
 on:
   pull_request:
     branches: [main]
@@ -10,7 +11,7 @@ env:
   JEKYLL_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  testing:
+  test:
     name: test URLs
     runs-on: ubuntu-latest
 
@@ -25,7 +26,7 @@ jobs:
           ruby-version: 3.1.3
           bundler-cache: false
 
-      - name: Setup GEMs
+      - name: Install GEMs
         working-directory: docs
         env:
           BUNDLE_GEMFILE: ${{github.workspace}}/docs/GemFile
