--- a/.github/workflows/test-indicators-coverage.yml
+++ b/.github/workflows/test-indicators-coverage.yml
@@ -6,7 +6,6 @@ on: ["push"]
 
 permissions:
   contents: read
-  pull-requests: write
 
 jobs:
   test:
@@ -34,14 +33,8 @@ jobs:
 
       - name: Test indicators
         run: |
-          coverage run -m --source=stock_indicators pytest -svr A tests --junitxml=pytest.xml
+          coverage run -m --source=stock_indicators pytest -svr A tests
           coverage xml
-
-      - name: Post test summary
-        uses: MishaKav/pytest-coverage-comment@main
-        with:
-          pytest-xml-coverage-path: coverage.xml
-          junitxml-path: pytest.xml
 
       - name: Publish coverage to Codacy
         uses: codacy/codacy-coverage-reporter-action@v1
