--- a/.github/workflows/test-indicators.yml
+++ b/.github/workflows/test-indicators.yml
@@ -6,14 +6,14 @@ on:
   pull_request:
     branches: ["main"]
 
-permissions:
-  contents: read
-  pull-requests: write
-
 jobs:
   test:
     name: unit tests
     runs-on: ${{ matrix.os }}
+
+    permissions:
+      contents: read
+      pull-requests: write
 
     strategy:
       matrix:
@@ -54,6 +54,6 @@ jobs:
 
       - name: Post test summary
         uses: MishaKav/pytest-coverage-comment@main
-        if: ${{ env.IS_PRIMARY }}
+        if: env.IS_PRIMARY
         with:
           junitxml-path: pytest.xml
