--- a/.github/workflows/test-indicators.yml
+++ b/.github/workflows/test-indicators.yml
@@ -61,6 +61,12 @@ jobs:
           --cov-report term
           --cov-report xml:test-coverage.xml
 
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        if: env.IS_PRIMARY == 'true'
+        with:
+          node-version: latest
+
       - name: Convert to TRX
         if: env.IS_PRIMARY == 'true'
         run: npx jest-junit convert test-results.xml test-results.trx
