--- a/.github/workflows/test-indicators.yml
+++ b/.github/workflows/test-indicators.yml
@@ -74,5 +74,5 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           comment-title: ""
           results-path:  test-results.trx
-          coverage-path: test-coverage.xml
-          coverage-type: cobertura
+          # coverage-path: test-coverage.xml
+          # coverage-type: cobertura
