--- a/.github/workflows/deploy-package.yml
+++ b/.github/workflows/deploy-package.yml
@@ -1,41 +1,42 @@
 # ref: https://packaging.python.org/en/latest/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows
 
-name: Build and Publish
+name: Deploy PyPI package
 
 on:
   push:
     branches:
       - main
-    tags: 
+    tags:
       - '[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
 
   # production build
   build:
-    name: Build distribution 📦
+    name: Create package 📦
     runs-on: ubuntu-latest
 
     steps:
 
-    - uses: actions/checkout@v4
+    - name: Checkout source
+      uses: actions/checkout@v4
       with:
         fetch-tags: true
         fetch-depth: 0
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Setup Python
+      uses: actions/setup-python@v5
       with:
         python-version: "3.x"
 
-    - name: Install pypa/build
+    - name: Build library
       run: python3 -m pip install build --user
 
-    - name: Build a binary wheel and a source tarball
+    - name: Build wheel and tarball
       run: python3 -m build
 
-    - name: Store the distribution packages
-      uses: actions/upload-artifact@v3
+    - name: Save package
+      uses: actions/upload-artifact@v4
       with:
         name: python-package-distributions
         path: dist/
@@ -43,7 +44,7 @@ jobs:
 
   # This will be triggered only when a tag is pushed
   publish-to-pypi:
-    name: Publish to PyPI 🐍
+    name: Publish to PyPI 🐍 (pypi.org)
     if: startsWith(github.ref, 'refs/tags/')
     needs:
     - build
@@ -58,19 +59,19 @@ jobs:
 
     steps:
 
-    - name: Download all the dists
-      uses: actions/download-artifact@v3
+    - name: Download package
+      uses: actions/download-artifact@v4
       with:
         name: python-package-distributions
         path: dist/
 
-    - name: Publish distribution 📦 to PyPI
+    - name: Publish package 📦 to pypi.org
       uses: pypa/gh-action-pypi-publish@release/v1
 
 
   # This will be triggered everytime when commit is pushed on main branch
   publish-to-testpypi:
-    name: Publish to TestPyPI 🐍
+    name: Publish to PyPI 🐍 (test.pypi.org)
     needs:
     - build
     runs-on: ubuntu-latest
@@ -84,13 +85,13 @@ jobs:
 
     steps:
 
-    - name: Download all the dists
-      uses: actions/download-artifact@v3
+    - name: Download package
+      uses: actions/download-artifact@v4
       with:
         name: python-package-distributions
         path: dist/
 
-    - name: Publish distribution 📦 to TestPyPI
+    - name: Publish package 📦 to test.pypi.org
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         repository-url: https://test.pypi.org/legacy/
