--- a/.github/workflows/test-docs-a11y.yml
+++ b/.github/workflows/test-docs-a11y.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Install Ruby
+      - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           working-directory: docs
@@ -56,3 +56,7 @@ jobs:
           npx pa11y-ci \
             --sitemap http://127.0.0.1:4000/sitemap.xml \
             --sitemap-exclude "/*.pdf"
+
+      - name: Kill site (failsafe)
+        if: always()
+        run: pkill -f jekyll
