--- a/.github/workflows/test-docs-links.yml
+++ b/.github/workflows/test-docs-links.yml
@@ -68,7 +68,7 @@ jobs:
         run: |
           htmlproofer _site \
             --no-enforce-https \
-            --check_external_hash false \
+            --check_external_hash=false \
             --ignore-status-codes "0,302,403,406,408,429,503,999" \
             --swap-urls "https\://python.stockindicators.dev:http\://127.0.0.1:4000" \
             --ignore-urls "/fonts.gstatic.com/"
