--- a/.github/workflows/test-indicators-coverage.yml
+++ b/.github/workflows/test-indicators-coverage.yml
@@ -1,6 +1,6 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Indicators
+name: Publish code coverage
 
 on: ["push"]
 
@@ -10,7 +10,7 @@ permissions:
 jobs:
   test:
     name: code coverage
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - name: Checkout source
@@ -34,6 +34,9 @@ jobs:
 
       - name: Test indicators
         run: |
+          sed -i '' 's/export\ LC_ALL=en_US.UTF-8/export\ LC_ALL=ru_RU.UTF-8/g' ~/.bashrc
+          source ~/.bashrc
+          locale
           coverage run -m --source=stock_indicators pytest -svr A tests
           coverage xml
 
