--- a/.github/workflows/test-indicators.yml
+++ b/.github/workflows/test-indicators.yml
@@ -1,14 +1,15 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Indicators
+name: PR unit test
 
 on:
   pull_request:
     branches: ["main"]
+    types: [opened, synchronize, reopened]
 
 jobs:
   test:
-    name: unit tests
+    name: indicators
     runs-on: ${{ matrix.os }}
 
     permissions:
@@ -23,8 +24,8 @@ jobs:
 
     env:
 
-      # identifying primary configuration so only one reports coverage
-      IS_PRIMARY: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.12' && matrix.dotnet-version == '8.x' }}
+      # identifying primary configuration so only one reports to console
+      IS_PRIMARY: ${{ matrix.os == 'macos-latest' && matrix.python-version == '3.12' && matrix.dotnet-version == '8.x' }}
 
     steps:
       - name: Checkout source
@@ -47,10 +48,14 @@ jobs:
           pip install -r requirements.txt
           pip install -r requirements-test.txt
 
-      - name: Test indicators
-        if: env.IS_PRIMARY == 'false'
-        run: pytest -vr A tests
+      - name: Test indicators (not locale_specific)
+        if: runner.os != 'macOS'
+        run: pytest -vr A tests -m "not locale_specific"
 
-      - name: Test indicators with coverage
-        if: env.IS_PRIMARY == 'true'
-        run: pytest -vr A tests --junitxml=test-results.xml
+      - if: runner.os == 'macOS'
+        name: Test indicators, including locale_specific(ru_RU)
+        run: |
+          sed -i '' 's/export\ LC_ALL=en_US.UTF-8/export\ LC_ALL=ru_RU.UTF-8/g' ~/.bashrc
+          source ~/.bashrc
+          locale
+          pytest -vr A tests $( $IS_PRIMARY && echo "--junitxml=test-results.xml" )
