fix upload artifact
Signed-off-by: Dave Skender <8432125+DaveSkender@users.noreply.github.com>

--- a/.github/workflows/deploy-package.yml
+++ b/.github/workflows/deploy-package.yml
@@ -40,7 +40,7 @@ jobs:
       with:
         name: python-package-distributions
         path: dist/
-
+        include-hidden-files: true
 
   # This will be triggered only when a tag is pushed
   publish-to-pypi:
