--- a/docs/GemFile
+++ b/docs/GemFile
@@ -13,4 +13,5 @@ group :jekyll_plugins do
 end
 
 gem 'wdm', '>= 0.2.0' if Gem.win_platform? # windows compatibilty pack
-gem "webrick" # needed for ruby > v3.0
+gem 'webrick' # needed for ruby > v3.0
+gem 'faraday' # reload/retry on file changes
