--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
     },
     "extensions": [
         "ms-python.python",
-        "ms-python.vscode-pylance"
+        "ms-python.vscode-pylance",
+        "github.copilot"
     ],
     "postCreateCommand": "pip install -r requirements-test.txt",
     "remoteUser": "vscode",
@@ -29,7 +30,7 @@
         }
     },
     "tasks": {
-        "test": "pytest -vr A tests -m \"not locale_specific\"",
+        "test": "pytest -vr A tests -m 'not locale_specific'",
         "build": "pip install -r requirements.txt  && pip install -r requirements-test.txt"
     }
 }
