Add GitHub Copilot extension to devcontainer.json
* Add "github.copilot" to the list of VS Code extensions in the devcontainer.json file

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
     "ms-vscode.cpptools",
     "eamodio.gitlens",
     "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint"
+    "dbaeumer.vscode-eslint",
+    "github.copilot"
   ],
   "postCreateCommand": "pip install -r requirements.txt -r requirements-test.txt"
 }
