Add `devcontainer.json` for Python Dev Container configuration
* Create `devcontainer.json` file
* Add configuration for Python Dev Container
* Specify Python version 3.9
* Add VS Code extensions for Python, Pylance, Flake8, Black Formatter, Isort, Jupyter, GitLens, Prettier, ESLint, GitHub Copilot, and Remote Containers
* Optimize post-create command to install dependencies from `requirements.txt` and `requirements-test.txt`
* Add `workspaceFolder` property to specify the default workspace folder

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,17 +6,17 @@
   },
   "extensions": [
     "ms-python.python",
-    "ms-azuretools.vscode-docker",
     "ms-python.vscode-pylance",
     "ms-python.flake8",
     "ms-python.black-formatter",
     "ms-python.isort",
     "ms-toolsai.jupyter",
-    "ms-vscode.cpptools",
     "eamodio.gitlens",
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "github.copilot"
+    "github.copilot",
+    "ms-vscode-remote.remote-containers"
   ],
-  "postCreateCommand": "pip install -r requirements.txt -r requirements-test.txt"
+  "postCreateCommand": "pip install -r requirements.txt -r requirements-test.txt",
+  "workspaceFolder": "/workspace"
 }
