--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,17 +2,19 @@
   "recommendations": [
     "codacy-app.codacy",
     "donjayamanne.python-extension-pack",
+    "EditorConfig.EditorConfig",
+    "ginfuru.ginfuru-vscode-jekyll-syntax",
     "GitHub.codespaces",
     "GitHub.copilot",
     "github.vscode-github-actions",
     "ms-azuretools.vscode-docker",
+    "ms-dotnettools.vscode-dotnet-runtime",
     "ms-python.black-formatter",
     "ms-python.debugpy",
     "ms-python.python",
     "ms-python.pylint",
     "ms-python.vscode-pylance",
     "ms-vscode-remote.remote-containers",
-    "redhat.vscode-yaml",
-    "ginfuru.ginfuru-vscode-jekyll-syntax"
+    "redhat.vscode-yaml"
   ]
 }
