--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -11,6 +11,7 @@
     "ms-dotnettools.vscode-dotnet-runtime",
     "ms-python.black-formatter",
     "ms-python.debugpy",
+    "ms-python.isort",
     "ms-python.python",
     "ms-python.pylint",
     "ms-python.vscode-pylance",
